2009-01-31 Harri Pitkänen <hatapitk@iki.fi>

	* Turn SpellChecker, Hyphenator and GrammarChecker into
	  singletons.

2009-01-04 Harri Pitkänen <hatapitk@iki.fi>

	* Add option for preventing hyphenation of unknown
	  or foreign words.

2008-12-29 Harri Pitkänen <hatapitk@iki.fi>

	 * Adapt to grammar checking framework API changes in
	   OOo 3.0.1.

2008-10-12 Harri Pitkänen <hatapitk@iki.fi>

	* Use VOIKKO_OPT_ACCEPT_UNFINISHED_PARAGRAPHS_IN_GC from
	  libvoikko 2.1.
	* Enable grammar checker by default.
	* Increase version number to 3.1.

2008-08-23 Harri Pitkänen <hatapitk@iki.fi>

	* Detect UI language and use that to offer grammar error
	  explanations in correct language.

2008-08-16 Harri Pitkänen <hatapitk@iki.fi>

	* Add grammar checker implementation.

2008-08-10 Harri Pitkänen <hatapitk@iki.fi>

	* Adapt to SDK changes on Windows.

2008-08-09 Harri Pitkänen <hatapitk@iki.fi>

	* Adapt to SDK changes on OS X.

2008-07-25 Harri Pitkänen <hatapitk@iki.fi>

	* Adapt to DEV300_m26.

2008-07-21 Harri Pitkänen <hatapitk@iki.fi>

	* Add setting (checkbox) for compound word hyphenation and
	  store the value to the registry.
	* Use new compound word hyphenation setting when hyphenating.
	* Add build option SHOW_UGLY_WARNINGS to be used in binary
	  test builds.

2008-07-19 Harri Pitkänen <hatapitk@iki.fi>

	* Add settings dialog.
	* Add build option for disabling the grammar checker.

2008-07-18 Harri Pitkänen <hatapitk@iki.fi>

	* Add icon and publisher information for new extension manager.

2008-07-10 Harri Pitkänen <hatapitk@iki.fi>

	* Build fixes, thanks to Caolan McNamara from RedHat.

2008-03-30 Harri Pitkänen <hatapitk@iki.fi>

	* Add stub for grammar checker implementation.
	* Documentation fixes.

2008-03-24 Harri Pitkänen <hatapitk@iki.fi>

	* Respect HyphMinLeading and HyphMinTrailing in
	  Hyphenator::createPossibleHyphens.

2008-03-23 Harri Pitkänen <hatapitk@iki.fi>

	* Update license to GPL v3 or later.