@@ -1,3 +1,7 @@
+2009-02-14 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Turn PropertyManager into a proper singleton.
+
 2009-01-31 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Turn SpellChecker, Hyphenator and GrammarChecker into
